samples/_failures_safe/1761242641_accf52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87558566.c:177: error: expected ‘;’, ‘,’ or ‘)’ at end of input
